--- a/themes/tale-theme/assets/scss/tale/_base.scss
+++ b/themes/tale-theme/assets/scss/tale/_base.scss
@@ -9,7 +9,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
+  font-family: Cambria, sans-serif;
   font-size: 16px;
   overflow-x: hidden;
   color: $default-color;
@@ -95,5 +95,6 @@ a:hover {
 
 ul {
   list-style: none;
+  font-style: italic;
   margin: 0;
 }
