--- a/themes/tale-theme/assets/scss/tale/_base.scss
+++ b/themes/tale-theme/assets/scss/tale/_base.scss
@@ -9,7 +9,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Cambria, sans-serif;
+  font-family: Cambria, serif;
   font-size: 16px;
   overflow-x: hidden;
   color: $default-color;
@@ -20,7 +20,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-  font-family: "Work Sans","Helvetica Neue", Helvetica, sans-serif;
+  font-family: Cambria, serif;
 }
 
 h1, h2 {
